Bug 171995 - [OS X] Wikipedia applet does not open urls in default browser
Summary: [OS X] Wikipedia applet does not open urls in default browser
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View (other bugs)
Version First Reported In: 2.0-SVN
Platform: Unlisted Binaries macOS
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords: needs_verification
: 175806 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-10-01 23:39 UTC by illogic-al
Modified: 2009-03-13 15:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description illogic-al 2008-10-01 23:39:45 UTC
Version:            (using Devel)
Compiler:          gcc version 4.2.1 (Apple Inc. build 5564) 
OS:                OS X
Installed from:    Compiled sources

Links clicked in the WIkipedia tab in Amarok2 don't open up in the default browser. The expected behavior is that Amarok open the page, or launch the browser and then open the page. 
I'd like to say this is a KDE bug but if you go to Help -> Report Bug... and click on the http://bugs.kde.org link in the dialog box that pops up, the correct thing happens.
Comment 1 Mark Kretschmann 2008-11-02 11:57:45 UTC
I've looked up the actual code, here it comes:

void
WikipediaApplet::linkClicked( const QUrl &url )
{
    DEBUG_BLOCK
    debug() << "URL: " << url;
    KRun::runUrl( url, "text/html", 0  );
}

Not sure if this is the recommended way to open HTML pages externally.
Comment 2 Mark Kretschmann 2008-11-02 12:10:42 UTC
SVN commit 878985 by markey:

Use the Right Way (TM) to open web pages in external browser.

BUG: 171995


 M  +3 -2      WikipediaApplet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=878985
Comment 3 illogic-al 2008-11-22 08:11:09 UTC
Definitely not fixed. Regression perhaps? 
Comment 4 illogic-al 2008-11-22 08:13:03 UTC
*** Bug 175806 has been marked as a duplicate of this bug. ***
Comment 5 Mark Kretschmann 2008-11-22 11:58:06 UTC
Yeah, we did indeed change the code back to use Amarok::invokeBrowser(). Too bad that this doesn't work on OSX..

Might need an #ifdef for now.
Comment 6 Mark Kretschmann 2008-11-26 09:50:11 UTC
Discovered this thread on kde-core-devel discussing the problem:

http://lists.kde.org/?t=122710352700002&r=1&w=2
Comment 7 Sven Krohlas 2009-03-13 15:33:38 UTC
I changed a lot in that area recently, so this might work now? Please check.
Comment 8 Leo Franchi 2009-03-13 15:40:39 UTC
indeed it does work now. thanks sven!