Use the Right Way (TM) to open web pages in external browser.

BUG: 171995

svn path=/trunk/extragear/multimedia/amarok/; revision=878985